--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/ha-il/DJ-Run#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
